--- a/company.html
+++ b/company.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
-<title>Company Profile - StableBuild Japan</title>
+<title>Company Profile - StableBuild</title>
 <meta content="ステイブルビルド合同会社の会社概要" name="description">
 <meta content="width=device-width, initial-scale=1" name="viewport">
 <link href="index_files/stablebuild.webflow.a2134c4a5.css" rel="stylesheet" type="text/css">
